Upgrade for Magento 2

--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
-    "name": "outeredge/edge-magento-module-allconfigurableoptions",
-    "type": "magento-module",
-    "description": "All Configurable Options Module for Magento by outer/edge",
+    "name": "outeredge/magento-outofstockoptions-module",
+    "type": "magento2-module",
+    "description": "All Configurable Options on config product: Module for Magento 2 by outer/edge",
     "license": "MIT",
     "authors": [
         {
@@ -9,14 +9,10 @@
             "email": "support@outeredgeuk.com"
         }
     ],
-    "require": {
-        "magento-hackathon/magento-composer-installer": "*"
-    },
-    "extra": {
-        "map": [
-            ["app/code/local/Edge/AllConfigurableOptions", "app/code/local/Edge/AllConfigurableOptions"],
-            ["app/etc/modules/Edge_AllConfigurableOptions.xml", "app/etc/modules/Edge_AllConfigurableOptions.xml"],
-            ["skin/frontend/base/default/edge/allconfigurableoptions", "skin/frontend/base/default/edge/allconfigurableoptions"]
-        ]
+    "autoload": {
+        "files": ["registration.php"],
+        "psr-4": {
+            "OuterEdge\\ConfigProduct\\": ""
+        }
     }
 }
